<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.LoginFragment"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView_logo"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="112dp"
        android:src="@drawable/courier_logo"
        android:layout_marginTop="64dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        />


    <TextView
        android:id="@+id/textView_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_logo"
        android:textAlignment="center"
        android:layout_marginHorizontal="36dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/md_theme_light_primary"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView_description"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="36dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textAlignment="center"
        android:text="@string/login"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textField_username"
        android:text="@string/login_description"
        android:textAlignment="center"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <com.tongue.dandelioncourier.ui.views.TextFieldView
        android:id="@+id/textField_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textField_password"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.tongue.dandelioncourier.ui.views.TextFieldView
        android:id="@+id/textField_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login_enter"
        android:paddingHorizontal="24dp"
        android:paddingVertical="18dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:rippleColor="@color/md_theme_light_primary"
        android:layout_marginHorizontal="42dp"
        android:layout_marginBottom="100dp"
        style="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_register"
        android:text="@string/login_register"
        android:layout_marginHorizontal="42dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>