<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image"
                android:layout_width="124dp"
                android:layout_height="124dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="48dp"
                android:src="@drawable/img_registro"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:text="@string/register_description"
                android:textColor="@color/strong_grey"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.tongue.dandelioncourier.ui.views.TextFieldView
                android:id="@+id/textField_firstname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.tongue.dandelioncourier.ui.views.TextFieldView
                android:id="@+id/textField_lastname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textField_firstname"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.tongue.dandelioncourier.ui.views.TextFieldView
                android:id="@+id/textField_car"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textField_lastname"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.tongue.dandelioncourier.ui.views.TextFieldView
                android:id="@+id/textField_brand"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textField_car"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.tongue.dandelioncourier.ui.views.TextFieldView
                android:id="@+id/textField_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textField_brand"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.tongue.dandelioncourier.ui.views.TextFieldView
                android:id="@+id/textField_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textField_username"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textField_password"
                android:layout_marginTop="36dp"
                android:text="@string/register_continue"
                android:paddingHorizontal="24dp"
                android:paddingVertical="18dp"
                app:backgroundTint="@color/black"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:rippleColor="@color/black"
                android:layout_marginHorizontal="36dp"
                style="@style/Widget.MaterialComponents.Button"
                app:cornerRadius="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>